@startuml

title __RESPONSE's Class Diagram__\n

  namespace com.example.lib_network {
    namespace okhttp {
      namespace response {
        class com.example.lib_network.okhttp.response.CommonFileCallback {
            - EMPTY_MSG : String
            - IO_ERROR : int
            - NETWORK_ERROR : int
            {static} - PROGRESS_MESSAGE : int
            - mDeliveryHandler : Handler
            - mFilePath : String
            - mProgress : int
            + CommonFileCallback()
            + onFailure()
            + onResponse()
            - checkLocalFilePath()
            - handleResponse()
        }
      }
    }
  }
  

  namespace com.example.lib_network {
    namespace okhttp {
      namespace response {
        class com.example.lib_network.okhttp.response.CommonJsonCallback {
            - EMPTY_MSG : String
            - JSON_ERROR : int
            - NETWORK_ERROR : int
            - OTHER_ERROR : int
            - mClass : Class<?>
            - mDeliveryHandler : Handler
            + CommonJsonCallback()
            + onFailure()
            + onResponse()
            - handleResponse()
        }
      }
    }
  }
  

  com.example.lib_network.okhttp.response.CommonFileCallback .up.|> okhttp3.Callback
  com.example.lib_network.okhttp.response.CommonFileCallback o-- com.example.lib_network.okhttp.response.listener.DisposeDownloadListener : mListener
  com.example.lib_network.okhttp.response.CommonJsonCallback .up.|> okhttp3.Callback
  com.example.lib_network.okhttp.response.CommonJsonCallback o-- com.example.lib_network.okhttp.response.listener.DisposeDataListener : mListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
